--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap");
+
 :root {
   --foreground-rgb: 0, 0, 0;
+  --principal: #35682d;
+  --white: #f1f1f1;
+  --hover-white: #d1d1d1;
+}
+
+@keyframes animateFromCenter {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes animateMain {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.animate-span {
+  animation: animateFromCenter 1s ease-in-out;
+}
+.animate-image {
+  animation: animateFromCenter 1s ease-in-out;
+}
+.animate-main {
+  animation: animateMain 0.5s ease-in-out;
 }
