--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,10 +6,11 @@
 
 :root {
   --background: #f0e2cf;
+  --text: #977657;
   --principal: #367c2b;
   --red: #d20019;
   --hover-principal: #5fb852;
-  --white: #f0e2cf;
+  --white: #f3f3f3;
   --hover-white: #e2e1e1;
 }
 
